--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@orbs-network/ton-access": "^2.3.3",
-    "@tact-lang/compiler": "^1.1.2",
+    "@tact-lang/compiler": "^1.4.0",
     "@tact-lang/coverage": "^0.0.7",
     "@tact-lang/deployer": "^0.2.0",
     "@tact-lang/emulator": "^4.2.1",
+    "@ton/crypto": "^3.2.0",
+    "@ton/ton": "^13.11.2",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.14",
     "@types/qs": "^6.9.7",
@@ -27,7 +29,7 @@
     "qs": "^6.11.0",
     "ton": "^13.1.0",
     "ton-abi": "^0.0.2",
-    "ton-core": ">=0.49.0",
+    "ton-core": "^0.53.0",
     "ton-crypto": "^3.2.0",
     "ton-jest": "^0.0.3",
     "ts-jest": "^29.0.3",
